--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ ul{list-style:disc;list-style-position:inside;margin-left:1.5em;}
 		でも交換日記とかを管理するのはやめましょう。</p>
 </div>
 <div class="box">
-	<h2>今日の目標？</h2>
+	<h2>今日の目標</h2>
 	<p>hetemlに置いたサイトを<br />
 		gitでバージョン管理して<br />
 		githubにpushして<br />
