deleted unnessesary file

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="ja">
 <head>
 <title>黒い画面とかよくわからない人のための、ゆるふわgit入門</title>
-<meta charset="Shift_JIS" />
+<meta charset="UTF-8" />
 </head>
 <body>
 <style>
